# cholgraph

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  environment.yml  pyproject.toml
.github/workflows/: build-wheels.yml  unittests.yml
ci/: 311.yml  312.yml  313.yml  314.yml
src/cholgraph/: __init__.py  pytensor.py
src/cholmodjax/: __init__.py  pytensor.py
src/cpp/: cholgraph.cpp  cholmodjax.cpp
tests/: test_pytensor.py  test_smoke.py
