[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "cholmodjax"
version = "0.2.0"
description = "JAX-native sparse Cholesky factorization using CHOLMOD"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.0",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/cholmodjax"]
