[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "jax"]
build-backend = "scikit_build_core.build"

[project]
name = "cholgraph"
version = "0.6.0"
description = "JAX-native sparse Cholesky factorization using CHOLMOD"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "jax>=0.4.0",
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]
# Optional PyTensor frontend (cholgraph.pytensor) for PyMC's default backend,
# including gradient-based samplers (NUTS). The base package stays JAX-only.
pytensor = ["pytensor>=2.18"]

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/cholgraph"]
